k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-node-app
  namespace: devops
spec:
  selector:
    app: devops-node-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
